fondo evento y login movido sitio

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/casamarruecos.ico">
+  <link rel="icon" type="image/x-icon" href="assets/casamarruecos-logo-recortado.ico">
 </head>
 <body>
   <app-root></app-root>
